dotfiles and brclock

--- a/git/dotfiles/file/README.md.html
+++ b/git/dotfiles/file/README.md.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> README.md (1984B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> README.md (1878B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -72,15 +72,13 @@
 <a href="#l54" id="l54">54</a>
 <a href="#l55" id="l55">55</a>
 <a href="#l56" id="l56">56</a>
-<a href="#l57" id="l57">57</a>
-<a href="#l58" id="l58">58</a>
 </pre></td><td><pre>
 tudurom&apos;s dotfiles
 ==================
 
 &gt; you are your dotfiles
 
-A mix of style and usability, these are my dotfiles. This repo is structured in a way first-time Linux users and ricers can understand what&apos;s going on, with explications for each directory.
+A mix of style and usability, these are my dotfiles. This repo is structured in a way first-time UNIX users and ricers can understand what&apos;s going on, with explications for each directory.
 
 Managing
 --------
@@ -129,8 +127,6 @@ In case of fire, my dotfiles are mirrored on a number of servers:
 
 - [GitHub](https://github.com/tudurom/dotfiles)
 - [notabug](https://notabug.org/tudurom/dotfiles)
-- [sr.ht](https://gogs.sr.ht/xenogenesis/dotfiles)
-- [gitgud](https://gitgud.io/tudurom/dotfiles_backup)
 - [my server](http://thetudor.ddns.net/git/dotfiles/log.html)
 
 </pre></td></tr></table>
