--- a/git/dotfiles/file/mpd/.mpd/mpd.conf.html
+++ b/git/dotfiles/file/mpd/.mpd/mpd.conf.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> mpd.conf (526B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> mpd.conf (572B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -36,6 +36,8 @@
 <a href="#l18" id="l18">18</a>
 <a href="#l19" id="l19">19</a>
 <a href="#l20" id="l20">20</a>
+<a href="#l21" id="l21">21</a>
+<a href="#l22" id="l22">22</a>
 </pre></td><td><pre>
 music_directory    &quot;/home/tudurom/usr/music&quot;
 playlist_directory &quot;/home/tudurom/.mpd/playlists&quot;
@@ -51,11 +53,13 @@ audio_output {
     auto_resample &quot;no&quot;
     auto_format &quot;no&quot;
     auto_channels &quot;no&quot;
+    format &quot;44800:16:2&quot;
 }
 audio_output {
   type &quot;fifo&quot;
   name &quot;vis_feed&quot;
   path &quot;/tmp/mpd.fifo&quot;
+  format &quot;44100:16:2&quot;
 }
 </pre></td></tr></table>
 </div>
