--- a/git/dotfiles/file/nvim/.config/nvim/init.vim.html
+++ b/git/dotfiles/file/nvim/.config/nvim/init.vim.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> init.vim (4491B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> init.vim (4612B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -243,6 +243,17 @@
 <a href="#l225" id="l225">225</a>
 <a href="#l226" id="l226">226</a>
 <a href="#l227" id="l227">227</a>
+<a href="#l228" id="l228">228</a>
+<a href="#l229" id="l229">229</a>
+<a href="#l230" id="l230">230</a>
+<a href="#l231" id="l231">231</a>
+<a href="#l232" id="l232">232</a>
+<a href="#l233" id="l233">233</a>
+<a href="#l234" id="l234">234</a>
+<a href="#l235" id="l235">235</a>
+<a href="#l236" id="l236">236</a>
+<a href="#l237" id="l237">237</a>
+<a href="#l238" id="l238">238</a>
 </pre></td><td><pre>
 &quot; ╻┏┓╻╻╺┳╸ ╻ ╻╻┏┳┓
 &quot; ┃┃┗┫┃ ┃  ┃┏┛┃┃┃┃
@@ -457,6 +468,17 @@ let g:syntastic_always_populate_loc_list = 1
 let g:syntastic_auto_loc_list = 1
 let g:syntastic_check_on_open = 1
 let g:syntastic_check_on_wq = 0
+
+&quot; }}}
+
+&quot; Romanian Digraphs {{{
+&quot; Vim comes default with turkish ş and ţ
+
+dig S, 536
+dig s, 537
+
+dig T, 538
+dig t, 539
 
 &quot; }}}
 
