--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-08-04 16:15</td><td><a href="commit/4285d2770f182e4c98128770410f0b3c33df2e3f.html">readme</a></td><td>Tudor</td><td class="num">2</td><td class="num">+2</td><td class="num">-4</td></tr>
+<tr><td>2016-08-04 15:27</td><td><a href="commit/17ba5dbee365f0d1dfb90948cb7546453e626635.html">ready to drop</a></td><td>Tudor</td><td class="num">10</td><td class="num">+62</td><td class="num">-31</td></tr>
 <tr><td>2016-08-01 20:24</td><td><a href="commit/9a96fbeeea0fb862ca9dd005ccefd7473a462085.html">misc</a></td><td>Tudor</td><td class="num">9</td><td class="num">+9</td><td class="num">-550</td></tr>
 <tr><td>2016-07-20 12:57</td><td><a href="commit/ed12a0567b987090892d41d45137eeb31a91756a.html">of course it wasn&apos;t done!</a></td><td>Tudor</td><td class="num">1</td><td class="num">+15</td><td class="num">-13</td></tr>
 <tr><td>2016-07-20 11:55</td><td><a href="commit/f290350263767448c22a310220e05ec2f472a7f4.html">the popup system should be done</a></td><td>Tudor</td><td class="num">13</td><td class="num">+151</td><td class="num">-73</td></tr>
