--- a/git/dotfiles/file/cwm/.cwmrc.html
+++ b/git/dotfiles/file/cwm/.cwmrc.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .cwmrc (2059B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .cwmrc (2028B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -122,7 +122,6 @@
 <a href="#l104" id="l104">104</a>
 <a href="#l105" id="l105">105</a>
 <a href="#l106" id="l106">106</a>
-<a href="#l107" id="l107">107</a>
 </pre></td><td><pre>
 #
 # ~/.cwmrc
@@ -138,16 +137,15 @@ borderwidth 3
 moveamount 10
 
 # colors
-# moonbow by inami
-# drop this into your .cwmrc
+# sea by tudurom
 
-color activeborder   &apos;#3c5a5d&apos;
-color inactiveborder &apos;#374650&apos;
-color font           &apos;#7b8695&apos;
-color menubg         &apos;#1b2227&apos;
-color menufg         &apos;#7b8695&apos;
-color groupborder    &apos;#785561&apos;
-color ungroupborder  &apos;#7e735a&apos;
+color activeborder   &apos;#3d637d&apos;
+color inactiveborder &apos;#003b4f&apos;
+color font           &apos;#b0b9b8&apos;
+color menubg         &apos;#00222b&apos;
+color menufg         &apos;#b0b9b8&apos;
+color groupborder    &apos;#85a5b3&apos;
+color ungroupborder  &apos;#0f3341&apos;
 
 # autogroups
 autogroup 2 Firefox
