--- a/git/dotfiles/file/wmrc/.scripts/cornerw.html
+++ b/git/dotfiles/file/wmrc/.scripts/cornerw.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> cornerw (1044B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> cornerw (1104B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -60,12 +60,20 @@
 <a href="#l42" id="l42">42</a>
 <a href="#l43" id="l43">43</a>
 <a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
+<a href="#l46" id="l46">46</a>
+<a href="#l47" id="l47">47</a>
+<a href="#l48" id="l48">48</a>
 </pre></td><td><pre>
 #! /bin/sh
 #
 # puts a window in a given corner or in the middle of the screen
 # (c) tudurom 2016 - wtfpl
 #
+
+if [ &quot;$(lsw | wc -l)&quot; -eq 1 ]; then
+    focusw &quot;$(lsw)&quot;
+fi
 
 pfw=&quot;${2:-$(pfw)}&quot;
 screen_width=&quot;$(dattr -w $(pfd))&quot;
