--- a/git/dotfiles/file/wmrc/.scripts/wewhandle.html
+++ b/git/dotfiles/file/wmrc/.scripts/wewhandle.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> wewhandle (558B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> wewhandle (602B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -49,8 +49,9 @@
 <a href="#l31" id="l31">31</a>
 <a href="#l32" id="l32">32</a>
 <a href="#l33" id="l33">33</a>
+<a href="#l34" id="l34">34</a>
 </pre></td><td><pre>
-#! /bin/sh
+#!/bin/sh
 #
 # handle wew events
 # (c) tudurom 2016 - wtfpl
@@ -68,7 +69,8 @@ while IFS=: read -r ev wid; do
         # Mapping request aka group activated
         19)
         if ! wattr o $wid; then
-            focusw $wid
+            test &quot;$wid&quot; != &quot;$(pfw)&quot; &amp;&amp; \
+                focusw $wid
         fi
         ;;
 
