--- a/git/mkl/log.html
+++ b/git/mkl/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-08-05 11:16</td><td><a href="commit/d9d238ddbae0e6ca7298ab0e6e7af58bc514ed1a.html">the SPACE environment variable now affects both orientations</a></td><td>Tudor</td><td class="num">3</td><td class="num">+2</td><td class="num">-3</td></tr>
+<tr><td>2016-08-05 11:14</td><td><a href="commit/144b334bad2452b84f02a2edb4d92181065aa49c.html">manpage</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-2</td></tr>
 <tr><td>2016-08-04 11:53</td><td><a href="commit/62fb96d009e889ecca9ba5cb54cd25a5ae5ae53e.html">init</a></td><td>Tudor</td><td class="num">4</td><td class="num">+196</td><td class="num">-0</td></tr>
 </tbody></table></div>
 </body>
