--- a/git/dotfiles/files.html
+++ b/git/dotfiles/files.html
@@ -51,7 +51,7 @@
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/miromiro.vim.html">nvim/.config/nvim/colors/miromiro.vim</a></td><td class="num">113L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/shblah.vim.html">nvim/.config/nvim/colors/shblah.vim</a></td><td class="num">68L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/shblah_light.vim.html">nvim/.config/nvim/colors/shblah_light.vim</a></td><td class="num">125L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/init.vim.html">nvim/.config/nvim/init.vim</a></td><td class="num">238L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/init.vim.html">nvim/.config/nvim/init.vim</a></td><td class="num">217L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/6c37-git.git.html">ports/etc/ports/6c37-git.git</a></td><td class="num">5L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/6c37.git.html">ports/etc/ports/6c37.git</a></td><td class="num">5L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/compat-32.rsync.inactive.html">ports/etc/ports/compat-32.rsync.inactive</a></td><td class="num">3L</td></tr>
@@ -90,8 +90,8 @@
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.bashrc.html">shell/.bashrc</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.mkshrc.html">shell/.mkshrc</a></td><td class="num">30L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.profile.html">shell/.profile</a></td><td class="num">13L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/alias.sh.html">shell/.shell.d/alias.sh</a></td><td class="num">74L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/export.sh.html">shell/.shell.d/export.sh</a></td><td class="num">37L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/alias.sh.html">shell/.shell.d/alias.sh</a></td><td class="num">73L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/export.sh.html">shell/.shell.d/export.sh</a></td><td class="num">38L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/prompt.sh.html">shell/.shell.d/prompt.sh</a></td><td class="num">19L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/tty.sh.html">shell/.shell.d/tty.sh</a></td><td class="num">21L</td></tr>
 <tr><td>m---------</td><td><a href="file/.gitmodules.html">st</a></td><td class="num"></td></tr>
@@ -116,6 +116,7 @@
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/madeon-pillar.png.html">wallpapers/wallpapers/madeon-pillar.png</a></td><td class="num">15546035B</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wallpapers/wallpapers/makeblur.sh.html">wallpapers/wallpapers/makeblur.sh</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/moonbow.png.html">wallpapers/wallpapers/moonbow.png</a></td><td class="num">424B</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/nomanssky.png.html">wallpapers/wallpapers/nomanssky.png</a></td><td class="num">7814986B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel.jpg.html">wallpapers/wallpapers/pixel.jpg</a></td><td class="num">222502B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel2.png.html">wallpapers/wallpapers/pixel2.png</a></td><td class="num">220467B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/rad.png.html">wallpapers/wallpapers/rad.png</a></td><td class="num">3572087B</td></tr>
@@ -176,6 +177,13 @@
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/xft.html">x/.xres/xft</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/xdg/.config/user-dirs.dirs.html">xdg/.config/user-dirs.dirs</a></td><td class="num">7L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/xmodmap/.xmodmaprc.html">xmodmap/.xmodmaprc</a></td><td class="num">15L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/alias.zsh.html">zsh/.zsh.d/alias.zsh</a></td><td class="num">74L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/comp.zsh.html">zsh/.zsh.d/comp.zsh</a></td><td class="num">4L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/export.zsh.html">zsh/.zsh.d/export.zsh</a></td><td class="num">38L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/style.zsh.html">zsh/.zsh.d/style.zsh</a></td><td class="num">23L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/syntax.zsh.html">zsh/.zsh.d/syntax.zsh</a></td><td class="num">1L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zsh.d/tty.zsh.html">zsh/.zsh.d/tty.zsh</a></td><td class="num">21L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/zsh/.zshrc.html">zsh/.zshrc</a></td><td class="num">3L</td></tr>
 </tbody></table></div>
 </body>
 </html>
