--- a/git/dotfiles/file/shell/.shell.d/export.sh.html
+++ b/git/dotfiles/file/shell/.shell.d/export.sh.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> export.sh (852B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> export.sh (868B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -53,12 +53,14 @@
 <a href="#l35" id="l35">35</a>
 <a href="#l36" id="l36">36</a>
 <a href="#l37" id="l37">37</a>
+<a href="#l38" id="l38">38</a>
 </pre></td><td><pre>
 export EDITOR=nvim
 export VISUAL=nvim
 export PAGER=less
 export BROWSER=firefox
 export LS_COLORS=&apos;&apos;
+export CC=clang
 
 # Golang specific variables
 if [ -f /usr/bin/go ]; then
