--- a/git/dotfiles/file/zsh/.zsh.d/comp.zsh.html
+++ b/git/dotfiles/file/zsh/.zsh.d/comp.zsh.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<title>urxvt - dotfiles - Small loan of configuration files.
+<title>comp.zsh - dotfiles - Small loan of configuration files.
 </title>
 <link rel="icon" type="image/png" href="../../../favicon.png" />
 <link rel="alternate" type="application/atom+xml" title="dotfiles.git Atom Feed" href="../../../atom.xml" />
@@ -15,44 +15,16 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> urxvt (504B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> comp.zsh (128B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
 <a href="#l4" id="l4">4</a>
-<a href="#l5" id="l5">5</a>
-<a href="#l6" id="l6">6</a>
-<a href="#l7" id="l7">7</a>
-<a href="#l8" id="l8">8</a>
-<a href="#l9" id="l9">9</a>
-<a href="#l10" id="l10">10</a>
-<a href="#l11" id="l11">11</a>
-<a href="#l12" id="l12">12</a>
-<a href="#l13" id="l13">13</a>
-<a href="#l14" id="l14">14</a>
-<a href="#l15" id="l15">15</a>
-<a href="#l16" id="l16">16</a>
-<a href="#l17" id="l17">17</a>
-<a href="#l18" id="l18">18</a>
 </pre></td><td><pre>
-*.font: -gohu-gohufont-medium-r-normal--14-100-100-100-c-80-*-*
-URxvt.letterSpace: 0
-! No bold font
-URxvt.boldFont:
-*.scrollBar: false
-URxvt.cursorBlink: true
-URxvt.cursorUnderline: true
-URxvt.internalBorder: 20
-!URxvt.geometry: 100x30
-
-URxvt.perl-ext-common: default,url-select
-URxvt.keysym.M-u: perl:url-select:select_next
-URxvt.url-select.launcher: /usr/bin/env xdg-open
-URxvt.url-select.underline: false
-!URxvt.url-launcher: /usr/local/bin/firefox
-!URxvt.matcher.button: 1
-
-! vim: set ft=xdefaults :
+autoload -Uz compinit &amp;&amp; compinit
+zstyle &apos;:completion:*&apos; menu select
+zstyle &apos;:completion:*&apos; rehash true
+setopt COMPLETE_ALIASES
 </pre></td></tr></table>
 </div>
 </body>
